# python-poetry-template

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: test_version.py
