[tool.poetry]
name = "python-poetry-template"
version = "0.1.0"
description = ""
authors = ["Nils Jørgen Mittet <nils.jorgen.mittet@nav.no>"]
readme = "README.md"
packages = [{ include = "python_poetry_template", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"
black = "^23.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
